# llm-faithfulness

./: Makefile  README.md  pyproject.toml  setup.py
data/articulation_prompts/: tmp.json
data/articulation_requests/: tmp.json
data/articulation_responses/: articulation_responses.jsonl
data/articulation_responses_bkp/: articulation_responses.jsonl
data/articulation_responses_bkp/articulation_responses/: articulation_responses.jsonl
data/icl_prompts/: icl_prompts.jsonl  icl_prompts_test.json
data/icl_requests/: icl_requests.jsonl
data/icl_responses/: icl_responses.jsonl
data/processed_articulation_responses/: processed_articulation_responses.jsonl
data/processed_icl_responses/: processed_icl_responses.jsonl
data/tasks/: tasks.jsonl
ipynb/: analyze_icl_predictions.ipynb  scratch.ipynb
manuscript/: manuscript.typ
owain_app/: articulation.py  catalog.py  convert_articulation_prompts.py  convert_icl_prompts.py  convert_prompts.py  create_articulation_prompts.py  create_icl_prompts.py  create_tasks.py  dataset_partitioner.py  generate_figures.py  k_fold_validation.py  learning_prompts.py  openai_interaction.py  process_articulation_responses.py  process_icl_responses.py  schemas.py
tests/: test_catalog.py  test_create_tasks.py  test_dataset_partitioner.py  test_icl_prompts.py  test_k_fold_validation.py
