[tool.poetry]
name = "owain-app"
version = "0.1.0"
description = ""
authors = ["Gabriel Simmons <simmons.gabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.5"
click = "^8.1.7"
loguru = "^0.7.2"
dvc = "^3.30.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
ipykernel = "^6.27.0"
tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
